--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "arduino.path": "C:\\Program Files (x86)\\Arduino",
+    "arduino.path": "C:/Program Files/iotw/arduino-1.8.17",
     "arduino.commandPath": "arduino.exe",
     "files.associations": {
         "*.ino": "cpp",
+        "rgb-led.h": "c"
     }
 }
